force-app/main/default/objects/OneDrive_Credentials__mdt/OneDrive_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>OneDrive Credentials</label>
    <pluralLabel>OneDrive Credentials</pluralLabel>
</CustomObject>