force-app/main/default/objects/OneDrive_Credentials__mdt/fields/LinkedDate__c.field-meta.xml
<CustomField>
    <fullName>LinkedDate__c</fullName>
    <label>LinkedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>