force-app/main/default/objects/OneDrive_Credentials__mdt/fields/refresh_token__c.field-meta.xml
<CustomField>
    <fullName>refresh_token__c</fullName>
    <label>refresh_token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>