force-app/main/default/objects/OneDrive_Credentials__mdt/fields/WorkingStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkingStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkingStatus</label>
    <type>Checkbox</type>
</CustomField>